skdep/force-app/main/default/objects/Monitor__mdt/Monitor__mdt.object-meta.xml
<CustomObject>
    <label>Monitor</label>
    <pluralLabel>Monitors</pluralLabel>
</CustomObject>