skdep/force-app/main/default/objects/Monitor__mdt/fields/All_Module__c.field-meta.xml
<CustomField>
    <fullName>All_Module__c</fullName>
    <defaultValue>true</defaultValue>
    <label>All Module</label>
    <type>Checkbox</type>
</CustomField>