skdep/force-app/main/default/objects/Monitor__mdt/fields/Concern__c.field-meta.xml
<CustomField>
    <fullName>Concern__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Concern</label>
    <type>Checkbox</type>
</CustomField>