skdep/force-app/main/default/objects/Monitor__mdt/fields/Enable_Notification__c.field-meta.xml
<CustomField>
    <fullName>Enable_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Notification</label>
    <type>Checkbox</type>
</CustomField>