skdep/force-app/main/default/objects/Monitor__mdt/fields/Except_Module_Log__c.field-meta.xml
<CustomField>
    <fullName>Except_Module_Log__c</fullName>
    <label>Except Module Log</label>
    <type>TextArea</type>
</CustomField>