skdep/force-app/main/default/objects/Monitor__mdt/fields/Notification_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Email_Id__c</fullName>
    <label>Notification Email Id</label>
    <type>Email</type>
</CustomField>