skdep/force-app/main/default/objects/Monitor__mdt/fields/NumberOfRows__c.field-meta.xml
<CustomField>
    <fullName>NumberOfRows__c</fullName>
    <label>NumberOfRows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>