skdep/force-app/main/default/objects/Monitor__mdt/fields/Purging_Mode__c.field-meta.xml
<CustomField>
    <fullName>Purging_Mode__c</fullName>
    <label>Purging Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto</fullName>
                <default>true</default>
                <label>Auto</label>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>