skdep/force-app/main/default/objects/Monitor__mdt/fields/Schedule_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Job_Id__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Schedule Job Id</label>
    <type>Checkbox</type>
</CustomField>