skdep/force-app/main/default/objects/Monitor__mdt/fields/Terms_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_Condition__c</fullName>
    <label>Terms &amp; Condition</label>
    <type>TextArea</type>
</CustomField>